implement create and update for scientists data and entity data

--- a/views/scientists/scientistsForm.ejs
+++ b/views/scientists/scientistsForm.ejs
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paranormal Object Management System</title>
-  </head>
+  <%- include("../common/header") %>
   <body>
+    <%- include("../common/navbar") %>
     <h1><%=title%></h1>
-    <%- include("../common/navbar") %> <%- include("../common/errors") %>
+    <%- include("../common/errors") %>
     <form <%if(scientist) {%>
       action="/scientists/<%=scientist.id%>" method="post" <%} else {%>
       action="/scientists" method="post"> <% } %>
