--- a/views/paraEntities/entitiesView.ejs
+++ b/views/paraEntities/entitiesView.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paranormal Object Management System</title>
-  </head>
+  <%- include("../common/header") %>
   <body>
     <%- include("../common/navbar") %>
 
     <h1><%=title%></h1>
+    <div>
+      <a href="/para-entities/form">Insert Entity data</a>
+    </div>
     <ul>
       <% entities.map((entity) => { %>
       <li>
@@ -16,12 +15,16 @@
         <div>Name: <%=entity.name%></div>
         <div>Class: <%=entity.entity_class%></div>
         <div>Status: <%=entity.status%></div>
-        <div>Date of Discovery: <%=entity.discover_date%></div>
+        <div>
+          Date of Discovery: <%=new
+          Date(entity.discover_date).toISOString().substring(0, 10)%>
+        </div>
         <div>Managed by: <%=entity.manager%></div>
         <div>
           <p>Description:</p>
           <p><%=entity.description%></p>
         </div>
+        <div><a href="/para-entities/<%=entity.id%>/form">Update data</a></div>
       </li>
       <% }) %>
     </ul>
