implement delete logic for scientist, entties, and object data

--- a/views/paraEntities/entitiesView.ejs
+++ b/views/paraEntities/entitiesView.ejs
@@ -25,6 +25,9 @@
           <p><%=entity.description%></p>
         </div>
         <div><a href="/para-entities/<%=entity.id%>/form">Update data</a></div>
+        <div>
+          <a href="/para-entities/<%=entity.id%>/delete">Delete data</a>
+        </div>
       </li>
       <% }) %>
     </ul>
