--- a/views/paraObjects/objectsView.ejs
+++ b/views/paraObjects/objectsView.ejs
@@ -21,6 +21,7 @@
           <p><%=object.description%></p>
         </div>
         <div><a href="/para-objects/<%=object.id%>/form">Update data</a></div>
+        <div><a href="/para-objects/<%=object.id%>/delete">Delete data</a></div>
       </li>
       <% }) %>
     </ul>
