--- a/views/scientists/scientistsView.ejs
+++ b/views/scientists/scientistsView.ejs
@@ -5,6 +5,9 @@
     <%- include("../common/navbar") %>
 
     <h1><%=title%></h1>
+    <% if(errorMsg) {%>
+    <div><%=errorMsg%></div>
+    <%}%>
     <div>
       <a href="/scientists/form">Insert Scientist data</a>
     </div>
@@ -17,6 +20,9 @@
         <div>Managed entities count: <%=scientist.managed_entities%></div>
         <div>Managed objects count: <%=scientist.managed_objects%></div>
         <div><a href="/scientists/<%=scientist.id%>/form">Update data</a></div>
+        <div>
+          <a href="/scientists/<%=scientist.id%>/delete">Delete data</a>
+        </div>
       </li>
       <% }) %>
     </ul>
