--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,29 @@
-body {
-  margin: 0;
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
+
+html {
   padding: 0;
+  margin: 0;
+  min-height: 100%;
+}
+
+body {
+  font-family: "Muli", sans-serif;
+  font-weight: 400;
+  line-height: 1.58;
+  letter-spacing: -0.003em;
+  margin: 0;
+  padding: 0 3em;
+  color: white;
+  background-color: #1e293b;
+}
+
+a {
+  appearance: none;
+  text-decoration: none;
+  color: #94a3b8;
+  font-style: italic;
+  font-weight: 100;
 }
 
 .para-entities-form,
@@ -9,4 +32,87 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1em;
+}
+
+.item-header {
+  align-self: center;
+  padding: 1em;
+}
+
+.item-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  gap: 1em;
+}
+
+.button-list {
+  display: flex;
+  justify-content: center;
+  gap: 1.5em;
+}
+
+.scientist-item,
+.entities-item,
+.objects-item {
+  list-style: none;
+  border: 1px solid #334155;
+  border-radius: 1em;
+  padding: 1em;
+}
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+}
+
+.scientist-item .info,
+.objects-item .info {
+  grid-template-rows: repeat(5, 1fr);
+}
+
+.entities-item .info {
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.description {
+  inline-size: 100%;
+  overflow-wrap: break-word;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  align-items: center;
+}
+
+.content {
+  position: relative;
+  height: 80vh;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1300px;
+
+  display: grid;
+  grid-template: 1fr 5fr / 1fr 4fr;
+  padding: 1em;
+}
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.list-page {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.error-text {
+  color: #ef4444;
+  font-style: italic;
 }
