--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,28 +3,30 @@
   <%- include("common/header") %>
   <body>
     <%- include("common/navbar") %>
-    <h1>The Institute Paranormal Management System (PMS)</h1>
-    <p>
-      The Institute Paranormal Management System (PMS) is an advanced and secure
-      platform developed to catalog and manage the extensive array of paranormal
-      entities and objects encountered by our dedicated staff.
-    </p>
-    <p>
-      This system is meticulously designed to ensure the safe and confidential
-      handling of sensitive information, enabling our team to document, analyze,
-      and monitor each discovery with precision.
-    </p>
-    <p>
-      The PMS also incorporates robust security measures, including strict
-      access controls and real-time monitoring, to prevent unauthorized access
-      and protect against data leakage.
-    </p>
-    <p>
-      Users are reminded that any unauthorized attempt to access or disseminate
-      information from the PMS will result in severe disciplinary actions, in
-      accordance with the Institute’s strict confidentiality policies. Our
-      commitment to safeguarding this knowledge is paramount, as it is crucial
-      to the safety of both our personnel and the public.
-    </p>
+    <div class="content home-page">
+      <h1>The Institute Paranormal Management System (PMS)</h1>
+      <p>
+        The Institute Paranormal Management System (PMS) is an advanced and
+        secure platform developed to catalog and manage the extensive array of
+        paranormal entities and objects encountered by our dedicated staff.
+      </p>
+      <p>
+        This system is meticulously designed to ensure the safe and confidential
+        handling of sensitive information, enabling our team to document,
+        analyze, and monitor each discovery with precision.
+      </p>
+      <p>
+        The PMS also incorporates robust security measures, including strict
+        access controls and real-time monitoring, to prevent unauthorized access
+        and protect against data leakage.
+      </p>
+      <p>
+        Users are reminded that any unauthorized attempt to access or
+        disseminate information from the PMS will result in severe disciplinary
+        actions, in accordance with the Institute’s strict confidentiality
+        policies. Our commitment to safeguarding this knowledge is paramount, as
+        it is crucial to the safety of both our personnel and the public.
+      </p>
+    </div>
   </body>
 </html>
