--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,9 @@
   <%- include("common/header") %>
   <body>
     <%- include("common/navbar") %>
-    <h1>The Institute Paranormal Management System (PMS)</h1>
-    <h2>Entry point</h2>
+    <div class="content home-page">
+      <h1>The Institute Paranormal Management System (PMS)</h1>
+      <h2>Entry point</h2>
+    </div>
   </body>
 </html>
