--- a/views/scientists/scientistsView.ejs
+++ b/views/scientists/scientistsView.ejs
@@ -4,27 +4,20 @@
   <body>
     <%- include("../common/navbar") %>
 
-    <h1><%=title%></h1>
-    <% if(errorMsg) {%>
-    <div><%=errorMsg%></div>
-    <%}%>
-    <div>
-      <a href="/scientists/form">Insert Scientist data</a>
-    </div>
-    <ul>
-      <% scientists.map((scientist) => { %>
-      <li>
-        <div>Identification: <%=scientist.id%></div>
-        <div>Name: <%=scientist.name%></div>
-        <div>Department: <%=scientist.department%></div>
-        <div>Managed entities count: <%=scientist.managed_entities%></div>
-        <div>Managed objects count: <%=scientist.managed_objects%></div>
-        <div><a href="/scientists/<%=scientist.id%>/form">Update data</a></div>
+    <div class="content list-page">
+      <div class="item-header">
+        <h1><%=title%></h1>
+        <% if(errorMsg) {%>
+        <div class="error-text"><%=errorMsg%></div>
+        <%}%>
         <div>
-          <a href="/scientists/<%=scientist.id%>/delete">Delete data</a>
+          <a href="/scientists/form">Insert Scientist data</a>
         </div>
-      </li>
-      <% }) %>
-    </ul>
+      </div>
+      <ul class="item-list">
+        <% scientists.map((scientist) => { %> <%- include("scientistsItem", {
+        scientist: scientist }) %> <% }) %>
+      </ul>
+    </div>
   </body>
 </html>
