--- a/public/styles.css
+++ b/public/styles.css
@@ -26,6 +26,53 @@ a {
   font-weight: 100;
 }
 
+select {
+  appearance: none;
+  background-color: #18181b;
+  color: white;
+  border: none;
+  border-radius: 0.5em;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 50%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  text-align: center;
+}
+
+input[type="text"],
+input[type="date"] {
+  appearance: none;
+  border-radius: 1em;
+  border-color: transparent;
+  background-color: #18181b;
+  color: white;
+  padding: 0.2em 0.8em;
+  margin: 1em;
+}
+
+textarea {
+  border-radius: 1em;
+  padding: 1em;
+  background-color: #18181b;
+  color: white;
+}
+
+button {
+  background-color: #0e7490;
+  color: white;
+  border-radius: 1em;
+  border-color: transparent;
+  padding: 0.5em 1em;
+  transition: background-color 0.2s ease;
+}
+
+button:hover {
+  background-color: #22d3ee;
+}
+
 .para-entities-form,
 .para-objects-form {
   display: flex;
