implement simple password check for destructive actions

--- a/public/styles.css
+++ b/public/styles.css
@@ -43,6 +43,7 @@ select {
 }
 
 input[type="text"],
+input[type="password"],
 input[type="date"] {
   appearance: none;
   border-radius: 1em;
@@ -146,11 +147,26 @@ button:hover {
   padding: 1em;
 }
 
-.home-page {
+.home-page,
+.login-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.5em;
+}
+
+.login-page {
+  justify-content: center;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #64748b;
+  border-radius: 1em;
+  padding: 1em;
+  gap: 1em;
 }
 
 .list-page {
