--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -9,5 +9,7 @@
     <a href="/para-objects">Objects</a>
     |
     <a href="/about">About</a>
+    |
+    <a href="/login">Login</a>
   </ul>
 </nav>
